@@ -1,3 +1,8 @@
+2009-07-23  Jakub Jelinek  <jakub@redhat.com>
+
+	PR fortran/40839
+	* gfortran.dg/pr40839.f90: New test.
+
 2009-07-23  Michael Matz  <matz@suse.de>
 
 	PR middle-end/40830
